src/v7/CAPI_Topology.pas


procedure Topology_Get_AllIsolatedLoads_GR(); CDECL;
// Same as Topology_Get_AllIsolatedLoads but uses global result (GR) pointers
begin
    Topology_Get_AllIsolatedLoads(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Topology_Get_FirstLoad(): Integer; CDECL;
var
    node: TCktTreeNode;
    elm: TDSSCktElement;
begin
    Result := 0;
    node := ActiveTreeNode;
    if assigned(node) then
    begin
        elm := node.FirstShuntObject;
        if assigned(elm) then
        begin
            DSSPrime.ActiveCircuit.ActiveCktElement := elm;
            Result := 1;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Topology_Get_NextLoad(): Integer; CDECL;
var
    node: TCktTreeNode;
    elm: TDSSCktElement;
begin
    Result := 0;
    node := ActiveTreeNode;
    if assigned(node) then
    begin
        elm := node.NextShuntObject;
        if assigned(elm) then
        begin
            DSSPrime.ActiveCircuit.ActiveCktElement := elm;
            Result := 1;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Topology_Get_NumIsolatedLoads(): Integer; CDECL;
var
    elm: TPCElement;
    topo: TCktTree;
begin
    Result := 0;
    topo := ActiveTree;
    if Assigned(topo) then
    begin
        elm := DSSPrime.ActiveCircuit.PCElements.First;
        while assigned(elm) do
        begin
            if elm.IsIsolated then
                Inc(Result);
            elm := DSSPrime.ActiveCircuit.PCElements.Next;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Topology_Get_ActiveLevel(): Integer; CDECL;
begin
    Result := Topology_Get_ActiveBranch;
end;
//------------------------------------------------------------------------------
function Topology_Get_BusName_AnsiString(): Ansistring; inline;
var
    node: TCktTreeNode;
    elm: TDSSCktElement;
begin
    Result := '';
    node := ActiveTreeNode;
    if assigned(node) then
    begin
        elm := node.CktObject;
        if assigned(elm) then
            Result := elm.FirstBus;
    end;
end;

function Topology_Get_BusName(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Topology_Get_BusName_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Topology_Set_BusName(const Value: PAnsiChar); CDECL;
var
    topo: TCktTree;
    S, B: String;
    Found: Boolean;
    elem: TDSSCktElement;
    pdElem: TPDElement;
begin
    Found := FALSE;
    elem := NIL;
    S := Value;  // Convert to Pascal String
    topo := ActiveTree;
    if assigned(topo) then
    begin
        elem := DSSPrime.ActiveCircuit.ActiveCktElement;
        pdElem := topo.First;
        while Assigned(pdElem) and (not found) do
        begin
            B := pdElem.FirstBus;
            while Length(B) > 0 do
            begin
                if (CompareText(B, S) = 0) then
                begin
                    DSSPrime.ActiveCircuit.ActiveCktElement := pdElem;
                    Found := TRUE;
                    Break;
                end;
                B := pdElem.NextBus;
            end;
            pdElem := topo.GoForward;
        end;
    end;
    if not Found then
    begin
        DoSimpleMsg('Bus "' + S + '" Not Found in Active Circuit Topology.', 5003);
        if assigned(elem) then
            DSSPrime.ActiveCircuit.ActiveCktElement := elem;
    end;
end;
//------------------------------------------------------------------------------
end.
